# src/modules/users/users.controller.ts
@@ -1,7 +1,10 @@
 import {
   Body,
   Controller,
+  Delete,
   Get,
+  HttpCode,
+  HttpStatus,
   Param,
   ParseUUIDPipe,
   Patch,
@@ -23,19 +26,19 @@ export class UsersController {
   constructor(private readonly usersService: UsersService) {}
 
   @Get()
-  @ApiResponse({ status: 200, type: [ListUserDto] })
+  @ApiResponse({ status: HttpStatus.OK, type: [ListUserDto] })
   async findAll() {
     return this.usersService.findAll()
   }
 
-  @ApiResponse({ status: 200, type: ListUserDto })
+  @ApiResponse({ status: HttpStatus.OK, type: ListUserDto })
   @Get(':id')
   @ValidateExistingUser('id')
   async findById(@Param('id', ParseUUIDPipe) id: string) {
     return this.usersService.findById(id)
   }
 
-  @ApiResponse({ status: 200, type: ListUserDto })
+  @ApiResponse({ status: HttpStatus.OK, type: ListUserDto })
   @Get('email/:email')
   @ValidateExistingUser('email')
   async findByEmail(@Param('email') email: string) {
@@ -43,12 +46,12 @@ export class UsersController {
   }
 
   @Post()
-  @ApiResponse({ status: 201, type: ListUserDto })
+  @ApiResponse({ status: HttpStatus.CREATED, type: ListUserDto })
   async create(@Body() data: CreateUserRequestDto) {
     return this.usersService.create(data)
   }
 
-  @ApiResponse({ status: 200, type: ListUserDto })
+  @ApiResponse({ status: HttpStatus.OK, type: ListUserDto })
   @Patch('change-password/:id')
   @ValidateExistingUser('id')
   async changePassword(
@@ -56,5 +59,14 @@ export class UsersController {
     @Body() data: ChangePasswordRequestDto,
   ) {
     return this.usersService.changePassword(id, data.oldPassword, data.newPassword)
+  }
+
+  @ApiResponse({ status: HttpStatus.NO_CONTENT })
+  @Delete('deactivate/:id')
+  @ValidateExistingUser('id')
+  @HttpCode(HttpStatus.NO_CONTENT)
+  async softDelete(@Param('id', ParseUUIDPipe) id: string) {
+    await this.usersService.softDelete(id)
+    return
   }
 }
